# augmented-go

./: .gitignore  AUTHORS  CMakeLists.txt  CodeCoverage.runsettings  LICENSE  README.md  VERSION.in  doxygen-with-diagrams.cfg  doxygen.cfg  generate_vs_projects.bat  index.html  modify_vs_projects.py  params.json
Go_AugmentedReality/: BackendThread.cpp  BackendThread.hpp  CMakeLists.txt  main.cpp
Go_Backend/: Backend.cpp  Backend.hpp  CMakeLists.txt  Game.cpp  Game.hpp
Go_Backend_Test/: CMakeLists.txt  backend_test.cpp  scoring_test.cpp
Go_Backend_Unittest/: CMakeLists.txt  backend_test.cpp
Go_Controller/: BackendThread.cpp  BackendThread.hpp  BackendWorker.cpp  BackendWorker.hpp  CMakeLists.txt  main.cpp
Go_GUI/: AugmentedView.cpp  AugmentedView.hpp  CMakeLists.txt  CameraView.hpp  ChangeScanRateDialog.hpp  ChangeScanRateDialog.ui  GUI.cpp  GUI.hpp  GUI.ui  NewGameDialog.hpp  NewGameDialog.ui  ResourceHelper.cpp  ResourceHelper.hpp  Version.cpp.in  VirtualView.cpp  VirtualView.hpp  dummy.cpp
Go_GUI/include/Go_GUI/: GUI.h
Go_GUI/models/: example_board.3DS  example_board.max  stone.3DS  stone.max
Go_GUI/src/: GUI.cpp  VirtualView.cpp
Go_GUI_Test/: CMakeLists.txt  some_tests.cpp
Go_Game/: CMakeLists.txt
Go_Game_Unittest/: CMakeLists.txt
Go_Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.hpp  Scanner_class.cpp  Scanner_implementation.cpp  Scanner_implementation.hpp  auto_warp.cpp  detect_board.cpp  detect_board.hpp  detect_linies_intersections.cpp  detect_linies_intersections.hpp  detect_stones.cpp  detect_stones.hpp  overwrittenOpenCV.hpp
Go_Scanner_Test/: CMakeLists.txt  main.cpp  scanner_tests.cpp  some_tests.cpp
Go_Scanner_Unittest/: CMakeLists.txt  scanner_tests.cpp
Go_VirtualReality/: CMakeLists.txt  dummy.cpp
cmake/: FindOpenCV.cmake  add_backend_to_target.cmake  add_fuego_to_target.cmake  add_game_to_target.cmake  add_gui_to_target.cmake  add_opencv_to_target.cmake  add_scanner_to_target.cmake  configure_target.cmake
doxygen-html/: _augmented_view_8hpp_source.html  _backend_worker_8hpp_source.html  _change_scan_rate_dialog_8hpp_source.html  _g_u_i_8hpp_source.html  _game_8hpp_source.html  _new_game_dialog_8hpp_source.html  _scanner_8hpp_source.html  _version_8hpp_source.html  _virtual_view_8hpp_source.html  annotated.html  class_go___a_r_1_1_backend_worker-members.html  class_go___a_r_1_1_backend_worker.html  class_go___backend_1_1_game-members.html  class_go___backend_1_1_game.html  class_go___controller_1_1_backend_worker-members.html  class_go___controller_1_1_backend_worker.html  class_go___controller_1_1_backend_worker__coll__graph.map  class_go___controller_1_1_backend_worker__coll__graph.md5  class_go___g_u_i_1_1_augmented_view-members.html  class_go___g_u_i_1_1_augmented_view.html  class_go___g_u_i_1_1_augmented_view__coll__graph.map  class_go___g_u_i_1_1_augmented_view__coll__graph.md5  class_go___g_u_i_1_1_change_scan_rate_dialog-members.html  class_go___g_u_i_1_1_change_scan_rate_dialog.html  class_go___g_u_i_1_1_change_scan_rate_dialog__coll__graph.map  class_go___g_u_i_1_1_change_scan_rate_dialog__coll__graph.md5  class_go___g_u_i_1_1_g_u_i-members.html  class_go___g_u_i_1_1_g_u_i.html  class_go___g_u_i_1_1_g_u_i__coll__graph.map  class_go___g_u_i_1_1_g_u_i__coll__graph.md5  class_go___g_u_i_1_1_new_game_dialog-members.html  class_go___g_u_i_1_1_new_game_dialog.html  class_go___g_u_i_1_1_new_game_dialog__coll__graph.map  class_go___g_u_i_1_1_new_game_dialog__coll__graph.md5  class_go___g_u_i_1_1_virtual_view-members.html  class_go___g_u_i_1_1_virtual_view.html  class_go___g_u_i_1_1_virtual_view__coll__graph.map  class_go___g_u_i_1_1_virtual_view__coll__graph.md5  class_go___scanner_1_1_scanner-members.html  class_go___scanner_1_1_scanner.html  (+60 more)
doxygen-html/search/: all_61.js  all_63.js  all_64.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_70.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  classes_61.js  classes_62.js  classes_63.js  classes_67.js  classes_6c.js  classes_6e.js  classes_73.js  classes_76.js  enums_73.js  enums_75.js  enumvalues_69.js  enumvalues_6c.js  functions_61.js  functions_63.js  functions_64.js  functions_66.js  functions_67.js  functions_68.js  functions_69.js  functions_6c.js  functions_6d.js  functions_6e.js  functions_70.js  functions_72.js  functions_73.js  functions_75.js  (+7 more)
fuego/: CMakeLists.txt  README-AUGMENTED-GO
fuego/go/: GoBoard.h  GoGame.cpp  GoGtpEngine.cpp
fuego/smartgame/: SgBlackWhite.h  SgProp.cpp  SgSystem.h  SgUctSearch.cpp  SgUctTree.cpp
res/models/: example_board.3DS  stone.3DS  stone.max
